tests/ui/fail/incorrect_item/union.stderr
error: `#[derive(Merge)]` only works on structs, not unions
 --> tests/ui/fail/incorrect_item/union.rs:5:1
  |
5 | union Choice {
  | ^^^^^
